# agent-framework

./: .env.example  .gitignore  .qa_result.json  ARCHITECT_REPORT.md  CLAUDE.md  CLI_WEB_CONSOLIDATION_ANALYSIS.md  CODE_REVIEW_AGENTICS_DASHBOARD.md  CODE_REVIEW_FIXES.md  CONTEXT_WINDOW_MANAGEMENT_PLAN.md  FIXES_VERIFIED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JIRA_TICKET.md  LICENSE  ORCHESTRATOR.md  QA_FINAL_REVIEW.md  QA_REPORT.md  QA_REVIEW_CONDITIONAL_WORKFLOWS.md  QA_REVIEW_GUIDED_ESCALATION.md  QA_VERIFICATION_ENGINEER_SPECIALIZATION.md  README.md  demo_dashboard.py  engineer_task.json  pyproject.toml  test_subprocess.py
config/: .gitignore  agent-framework.yaml  agent-framework.yaml.example  agents.yaml  agents.yaml.example  github.yaml  github.yaml.example  jira.yaml  jira.yaml.example  mcp-config.json  mcp-config.json.example  specializations.yaml  team-templates.yaml  workflows.example.yaml
docs/: AGENTIC_ROADMAP.md  ASYNC_COST_OPTIMIZATION.md  ASYNC_ESCALATION_REVIEW.md  ASYNC_SAFEGUARDS.md  CHECKPOINTS.md  CODE_REVIEW_WORKFLOW.md  CONDITIONAL_WORKFLOWS.md  CONTEXT_WINDOW_MANAGEMENT.md  ENGINEER_SPECIALIZATION.md  ENGINEER_SPECIALIZATION_PLAN.md  GETTING_STARTED.md  LOGGING_STANDARDS.md  MCP_ARCHITECTURE.md  MCP_SETUP.md  ONBOARDING_MVP.md  REVIEW_FIXES.md  STRUCTURED_FINDINGS.md  TROUBLESHOOTING.md  guided_escalation.md  learning-log-ME-443.md
examples/: QUICKSTART.md  example-task.json
scripts/: aggregate-logs.sh  apply-s2s-auth.sh  async-agent-runner.sh  circuit-breaker.sh  investigate-stalled-tasks.sh  queue_sprint6.py  review-escalations.sh  setup-env.sh  setup-mcp.sh  spawn-intervention-claude.sh  start-async-agents.sh  status-async-agents.sh  stop-async-agents.sh  verify_onboarding_mvp.sh  watchdog.sh
tests/: test_agentic_metrics.py  (+11 more)
(+387 files in other folders)
